--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "challenge01": "node challenge01/index.js",
     "challenge02": "node challenge02/index.js",
-    "challenge03": "node challenge03/index.js"
+    "challenge03": "node challenge03/index.js",
+    "challenge04": "node challenge04/index.js"
   },
   "repository": {
     "type": "git",
